# LunarReg

./: .gitignore  README.md  environment.yml  setup.cfg
src/lunarreg/: __init__.py  detectors.py  iterative_fbm.py  matchers.py
tests/: original_loc_3.tif  test.py
