[metadata]
name = lunarreg
version = 1.0.0
author = Jihoon Yang
author_email = jihoon.yang@piyo.cafe
description = Lunar Surface Image Registration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lanpai/LunarReg
project_urls =
    Bug Tracker = https://github.com/lanpai/LunarReg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    opencv-python
    numpy
    matplotlib

[options.packages.find]
where = src
